<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ActivityMain_ViewGroup_Content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.guddy.androidvip.MainActivity">

    <EditText
        android:id="@+id/ActivityMain_EditText_A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_add_black_24dp"/>

    <EditText
        android:id="@+id/ActivityMain_EditText_B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>

    <Button
        android:id="@+id/ActivityMain_Button_Compute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/compute"/>

    <TextView
        android:id="@+id/ActivityMain_TextViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
